Update layout styles for responsive design
Adjusted border-radius and height properties for better responsiveness on larger screens. Added max-width to .wrapper and removed unnecessary flex alignment for improved layout consistency.

--- a/style.css
+++ b/style.css
@@ -71,12 +71,13 @@ body {
   border-radius: 8px 8px 0 0;
   @media (min-width: 700px) {
     border-radius: 8px 0 0 8px;
-    flex: 1;
+    height: 100%;
   }
 }
 
 .wrapper {
   width: 100%;
+  max-width: 600px;
   background-color: var(--c-white);
   display: flex;
   flex-direction: column;
@@ -85,9 +86,7 @@ body {
   border-radius: 8px;
   @media (min-width: 700px) {
     flex-direction: row;
-    justify-content: center;
     max-width: 600px;
-    align-items: center;
   }
 }
 
